other version of rxtx

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
     mavenCentral()
+
+    maven {
+        url "http://repo.opennms.org/maven2/"
+    }
 }
 
 // In this section you declare the dependencies for your production and test code
@@ -25,7 +29,8 @@ dependencies {
     compile 'com.github.pires:obd-java-api:1.0'
 
     // https://mvnrepository.com/artifact/org.rxtx/rxtx
-    compile group: 'org.rxtx', name: 'rxtx', version: '2.1.7'
+    compile group: 'org.rxtx', name: 'rxtx', version: '2.2pre2'
+
 
 
 
