--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,23 @@ dependencies {
     //unix
     //compile name: 'RXTXcomm-2.2pre2'
 
+// https://mvnrepository.com/artifact/org.apache.commons/commons-io
+   // compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
+    compile 'com.github.pires:obd-java-api:1.0'
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+//    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
