--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,30 @@ repositories {
         dirs 'libs'
     }
 }
+version = '1.0'
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'Main'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'com.github.pires:obd-java-api:1.0'
 
     // https://mvnrepository.com/artifact/org.rxtx/rxtx
 
     //windows
-    compile group: 'org.rxtx', name: 'rxtx', version: '2.1.7'
+//    compile group: 'org.rxtx', name: 'rxtx', version: '2.1.7'
 
     //unix
-    //compile name: 'RXTXcomm-2.2pre2'
+    compile name: 'RXTXcomm-2.2pre2'
 
 // https://mvnrepository.com/artifact/org.apache.commons/commons-io
    // compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
@@ -46,6 +56,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
 
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
@@ -54,7 +67,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
 //    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
